--- a/src/View/Application/form/other/Comunicados.form
+++ b/src/View/Application/form/other/Comunicados.form
@@ -124,6 +124,7 @@
           </Properties>
           <Events>
             <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btnEditMouseClicked"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnEditActionPerformed"/>
           </Events>
         </Component>
         <Component class="View.BotonesText.Buttons" name="btnDelete">
