Se añadió el sonido a las notificaciones, se corrigieron validaciones y extras.

--- a/src/View/Application/form/RecuCorreo1.form
+++ b/src/View/Application/form/RecuCorreo1.form
@@ -192,6 +192,9 @@
           <Color blue="66" green="66" red="66" type="rgb"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtCodigoKeyReleased"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel3">
       <Properties>
