--- a/src/View/Application/form/other/MessageEditComunicados.form
+++ b/src/View/Application/form/other/MessageEditComunicados.form
@@ -108,6 +108,7 @@
     <Component class="javax.swing.JTextField" name="txtTitulo">
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtTituloActionPerformed"/>
+        <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtTituloKeyReleased"/>
       </Events>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
