--- a/src/View/samplemessage/MessageAddPersonas.form
+++ b/src/View/samplemessage/MessageAddPersonas.form
@@ -265,6 +265,10 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JTextField" name="Tipos">
+      <Properties>
+        <Property name="editable" type="boolean" value="false"/>
+        <Property name="enabled" type="boolean" value="false"/>
+      </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="TiposActionPerformed"/>
       </Events>
