--- a/src/View/samplemessage/MessageAddPersonas.form
+++ b/src/View/samplemessage/MessageAddPersonas.form
@@ -23,7 +23,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="sansserif" size="14" style="1"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Your Message Title Dialog Custom"/>
+        <Property name="text" type="java.lang.String" value="Gesti&#xf3;n de Usuarios"/>
       </Properties>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
