--- a/src/View/Application/form/other/Comunicados.form
+++ b/src/View/Application/form/other/Comunicados.form
@@ -58,11 +58,11 @@
               </Group>
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace max="32767" attributes="0"/>
-                  <Component id="btnAdd" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnAdd" min="-2" pref="58" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="btnEdit" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnEdit" min="-2" pref="60" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="btnDelete" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnDelete" min="-2" pref="60" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -70,11 +70,10 @@
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="1" attributes="0">
-                  <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="btnAdd" alignment="0" min="-2" max="-2" attributes="0"/>
-                      <Component id="btnEdit" alignment="0" min="-2" max="-2" attributes="0"/>
-                      <Component id="btnDelete" alignment="0" min="-2" max="-2" attributes="0"/>
+                      <Component id="btnAdd" alignment="0" min="-2" pref="49" max="-2" attributes="0"/>
+                      <Component id="btnEdit" min="-2" pref="49" max="-2" attributes="0"/>
+                      <Component id="btnDelete" min="-2" pref="49" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace pref="16" max="32767" attributes="0"/>
                   <Component id="jScrollPane1" min="-2" max="-2" attributes="0"/>
