--- a/src/View/Application/form/RecuCel.form
+++ b/src/View/Application/form/RecuCel.form
@@ -27,7 +27,7 @@
                           <Component id="lb1" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="lb2" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="381" max="32767" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
                   </Group>
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="1" attributes="0">
@@ -74,7 +74,7 @@
                   <Component id="btnRestablecer" alignment="3" min="-2" pref="36" max="-2" attributes="0"/>
                   <Component id="txtContraseña" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="218" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -83,7 +83,7 @@
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/View/icon/png/correooo.png"/>
+          <Image iconType="3" name="/View/icon/png/Chatting-amico pe.png"/>
         </Property>
       </Properties>
     </Component>
