--- a/src/View/Application/form/RecuCel.form
+++ b/src/View/Application/form/RecuCel.form
@@ -191,6 +191,9 @@
     </Component>
     <Component class="View.SWING.boton" name="btnRegresar">
       <Properties>
+        <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="cc" green="cc" red="cc" type="rgb"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Regresar a Opciones"/>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="12" style="1"/>
