--- a/src/View/Application/form/other/CodigosEstudiantes.form
+++ b/src/View/Application/form/other/CodigosEstudiantes.form
@@ -51,12 +51,14 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" alignment="0" attributes="0">
+              <Group type="102" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jScrollPane1" pref="700" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
               <Group type="102" alignment="1" attributes="0">
+                  <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
+                  <Component id="Buscador" min="-2" pref="177" max="-2" attributes="0"/>
                   <EmptySpace max="32767" attributes="0"/>
                   <Component id="buttons1" min="-2" pref="60" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
@@ -71,6 +73,7 @@
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="buttons1" min="-2" pref="49" max="-2" attributes="0"/>
                       <Component id="btnDelete" min="-2" pref="49" max="-2" attributes="0"/>
+                      <Component id="Buscador" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace pref="16" max="32767" attributes="0"/>
                   <Component id="jScrollPane1" min="-2" max="-2" attributes="0"/>
@@ -120,6 +123,11 @@
           </Properties>
           <Events>
             <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="buttons1MouseClicked"/>
+          </Events>
+        </Component>
+        <Component class="View.BotonesText.CustomTextField" name="Buscador">
+          <Events>
+            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="BuscadorKeyPressed"/>
           </Events>
         </Component>
       </SubComponents>
