--- a/src/View/samplemessage/MessageAddPersonas.form
+++ b/src/View/samplemessage/MessageAddPersonas.form
@@ -227,6 +227,8 @@
     <Component class="javax.swing.JTextField" name="Tipos">
       <Properties>
         <Property name="editable" type="boolean" value="false"/>
+        <Property name="text" type="java.lang.String" value="Docente"/>
+        <Property name="toolTipText" type="java.lang.String" value=""/>
         <Property name="enabled" type="boolean" value="false"/>
       </Properties>
       <Events>
